--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 html {
-    max-width: 100%;
+    height: 1080px;
+    width: 1920px;
     overflow: hidden;
 }
 
@@ -19,7 +20,7 @@ body {
 }
 
 #zmul-text3 {
-    position: absolute;
+    position: relative;
     top: 0;
     left: 770px;
     font-size: 70px;
