--- a/style.css
+++ b/style.css
@@ -8,6 +8,58 @@ body {
     background-color: rgb(219, 219, 219);
 }
 
+#ProcedureContent {
+    z-index: 3;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(90deg, #003900, #00C500, #003900);
+    background-size: 200% 200%;
+    animation: PC-animation 5s ease infinite;
+}
+
+@keyframes PC-animation {
+    0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
+
+#PC-box {
+    position: absolute;
+    z-index: 4;
+    text-align: center;
+    font-size: 50px;
+    top: 30%;
+    left: 35%;
+    background-color: black;
+    color: white;
+    width: 400px;
+    height: 300px;
+    border: white 5px solid;
+}
+
+#PC-box button {
+    width: 200px;
+    height: 100px;
+    font-size: 50px;
+    border: none;
+    transform: scaleY(0.8);
+    border-radius: 50%;
+}
+
+#PC-box button:hover {
+    width: 210px;
+    height: 110px;
+}
+
 #zmul-logo {
     position: relative;
     top: 0px;
@@ -38,7 +90,7 @@ body {
     font-family: "Times New Roman", Times, serif;
     color: #00C500;
     font-size: 40px;
-    top: 100px;
+    top: 90px;
     left: 200px;
     position: relative;
 }
